# resonance

./: .gitignore  .nox.yaml  .relicta.yaml  .warden.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nox-scan.yml  release.yml
.nox/: baseline.json
.roady/: events.jsonl  plan.json  spec.lock.json  spec.yaml  state.json
assets/presets/: ambient.dsl  dnb.dsl  empty.dsl  house.dsl  techno.dsl
assets/tutorials/: basics.yaml
docs/: backlog.md  pack-guide.md  plugin-guide.md
examples/: blue_man_group.dsl  blue_monday.dsl  fur_elise.dsl  jazz_waltz.dsl  monkey_island.dsl  safri_duo.dsl  techno_drive.dsl
src/: lib.rs  main.rs
src/ai/: config.rs  llm.rs  mod.rs  nl_parser.rs
src/audio/: buffer.rs  callback.rs  command.rs  effects.rs  export.rs  limiter.rs  mod.rs
src/content/: mod.rs  packs.rs  presets.rs  tutorials.rs
src/dsl/: ast.rs  compile.rs  diff.rs  error.rs  lexer.rs  mod.rs  note.rs  parser.rs  token.rs
src/event/: beat.rs  mod.rs  timeline.rs  transport.rs  types.rs
src/instrument/: bass_synth.rs  drum_kit.rs  envelope.rs  filter.rs  fm_synth.rs  mod.rs  noise_gen.rs  oscillator.rs  param_defs.rs  pluck_synth.rs  poly_synth.rs  router.rs  sample.rs  synth.rs  wavetable.rs
src/intent/: mod.rs  mode.rs  performance.rs  structural.rs
tests/: diff_roundtrip.rs  drum_playback.rs  dual_syntax.rs  full_pipeline.rs  phase2_integration.rs  phase5_features.rs  taste_persistence.rs  tui_e2e.rs
(+49 files in other folders)
