[package]
name = "resonance"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A terminal-native live coding music instrument"
license = "MIT"

[features]
default = []
llm = ["dep:reqwest", "dep:serde_json"]

[dependencies]
cpal = "0.15"
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
ringbuf = "0.4"
hound = "3.5"
rand = "0.8"
rand_chacha = "0.3"
dirs = "5"
midir = "0.10"
rosc = "0.11"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
